Co-authored-by: ZocP <ZocP@users.noreply.github.com> Co-authored-by: jingxishizuki <jingxishizuki@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <a class="navbar-brand" href="index.html">ASOUL FAN</a>
             <!-- 下拉菜单 -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="oi oi-menu"></span>菜单
-        </button>
+                <span class="oi oi-menu"></span>菜单
+            </button>
             <!-- 头部导航栏 -->
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
@@ -50,18 +50,20 @@
                     </div>
                 </div>
             </div>
+        </div>
     </section>
 
     <section class="ftco-section ftco-slant" id="GroupIntro" style="background-color: #1d1d1d;">
-        <!-- 了解他们 -->
+        <!-- 了解她们 -->
         <div class="container">
             <div class="row mb-5">
                 <div class="col-md-12 text-center ftco-animate" style="margin-bottom:-105px">
                     <h2 class="text-uppercase ftco-uppercase" style="color:#849095">了解她们</h2>
                     <div class="row justify-content-center mb-5">
                         <div class="col-md-7">
-                            <p class="lead"><a href="https://space.bilibili.com/703007996/" target="_blank">A-SOUL</a> 是乐华娱乐与字节跳动合作的虚拟偶像企划，中之人（即虚拟形象扮演者）小姐姐们在动捕房的行为被各种传感设备捕捉，再结合软件渲染而展现出实时、3D的二次元虚拟形象与观众进行互动。团队由五位性格、特长、魅力各异的女孩组成，她们分别是
-                                <a href="https://space.bilibili.com/672346917/" target="_blank">向晚AvA</a>、
+                            <p class="lead">
+                                <a href="https://space.bilibili.com/703007996/" target="_blank">A-SOUL</a> 是乐华娱乐与字节跳动合作的虚拟偶像企划，中之人（即虚拟形象扮演者）小姐姐们在动捕房的行为被各种传感设备捕捉，再结合软件渲染而展现出实时、3D的二次元虚拟形象与观众进行互动。团队由五位性格、特长、魅力各异的女孩组成，她们分别是
+                                <a href="https://space.bilibili.com/672346917/" target="_blank">向晚AvA</a>
                                 <a href="https://space.bilibili.com/672353429/" target="_blank">贝拉Bella</a>、
                                 <a href="https://space.bilibili.com/351609538/" target="_blank">珈乐Carol</a>、
                                 <a href="https://space.bilibili.com/672328094/" target="_blank">嘉然Diana</a>、
@@ -74,23 +76,42 @@
         </div>
     </section>
 
+    <!-- 光标立绘？ -->
     <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
         <div class="intropage">
 
         </div>
     </section>
+    <!--粉丝文化-->
+    <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
+        <div class="intropage">
+
+        </div>
+    </section>
+
+    <!-- 开发组名单 -->
+    <section class="ftco-section ftco-slant" id="thanks" style="background-color:#1d1d1d">
+        <div class="thankslist">
+
+        </div>
+    </section>
+
+
+
+
+    <!-- footer↓ -->
     <footer class="ftco-footer" id="section-counter" style="background-color:#1d1d1d">
         <div class="container">
             <div class="row">
                 <div class="col-md text-left">
-                    <h5 class="mt-0" style="color:white">&copy; Project A-SoulFan All Rights Reserved</h5>
+                    <h5 class="mt-0" style="color:white">&copy; ProJect.A5F</h5>
                 </div>
             </div>
         </div>
     </footer>
 
     <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#4586ff"/></svg></div>
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#4586ff" /></svg></div>
 
 
     <script src="js/jquery.min.js"></script>
@@ -100,8 +121,6 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.animateNumber.min.js"></script>
-
-
 
 
     <script src="js/main.js"></script>
