--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<!--404页面-嗯写-->
+<!--404页面-嗯丶写-->
 
 <head>
     <meta charset="utf-8">
@@ -23,10 +23,11 @@
     </style>
 </head>
 
+
 <body>
     <h3>404，您请求的文件/页面不存在!</h3>
-    >
-    < <h3>直接进行一个烂的摆,斯密马赛</h3>
+
+    <h3>直接进行一个烂的摆,斯密马赛</h3>
 </body>
 <!-- すみません -->
 
