--- a/index.html
+++ b/index.html
@@ -82,23 +82,23 @@
             <div class="idk">
                 <div class="p2_imgwrapper1 p2_imgwrapper">
                     <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
-                    <img class="p2_img" src="/images/1.png" />
+                    <img class="p2_img" src="./images/1.png" />
                 </div>
                 <div class="p2_imgwrapper2 p2_imgwrapper">
                     <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
-                    <img class="p2_img" src="/images/2.png" />
+                    <img class="p2_img" src="./images/2.png" />
                 </div>
                 <div class="p2_imgwrapper3 p2_imgwrapper">
                     <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
-                    <img class="p2_img" src="/images/3.png" />
+                    <img class="p2_img" src="./images/3.png" />
                 </div>
                 <div class="p2_imgwrapper4 p2_imgwrapper">
                     <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
-                    <img class="p2_img" src="/images/4.png" />
+                    <img class="p2_img" src="./images/4.png" />
                 </div>
                 <div class="p2_imgwrapper5 p2_imgwrapper">
                     <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
-                    <img class="p2_img" src="/images/5.png" />
+                    <img class="p2_img" src="./images/5.png" />
                 </div>
             </div>
             <!--<div class="intropage"></div>!-->
