--- a/index.html
+++ b/index.html
@@ -81,23 +81,23 @@
         <div id="pt2">
             <div class="idk">
                 <div class="p2_imgwrapper1 p2_imgwrapper">
-                    <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
+                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
                     <img class="p2_img" src="./images/1.png" />
                 </div>
                 <div class="p2_imgwrapper2 p2_imgwrapper">
-                    <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
+                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
                     <img class="p2_img" src="./images/2.png" />
                 </div>
                 <div class="p2_imgwrapper3 p2_imgwrapper">
-                    <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
+                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
                     <img class="p2_img" src="./images/3.png" />
                 </div>
                 <div class="p2_imgwrapper4 p2_imgwrapper">
-                    <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
+                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
                     <img class="p2_img" src="./images/4.png" />
                 </div>
                 <div class="p2_imgwrapper5 p2_imgwrapper">
-                    <div class="p2_inner_text">哇哇哇哇，上大分了happy(介绍用div)</div>
+                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
                     <img class="p2_img" src="./images/5.png" />
                 </div>
             </div>
