--- a/index.html
+++ b/index.html
@@ -53,26 +53,12 @@
         </div>
     </section>
 
-    <section class="ftco-section ftco-slant" id="GroupIntro" style="background-color: #1d1d1d;">
-        <!-- 了解她们 -->
-        <div class="container">
-            <div class="row mb-5">
-                <div class="col-md-12 text-center ftco-animate" style="margin-bottom:-105px">
-                    <h2 class="text-uppercase ftco-uppercase" style="color:#849095">了解她们</h2>
-                    <div class="row justify-content-center mb-5">
-                        <div class="col-md-7">
-                            <p class="lead">
-                                <a href="https://space.bilibili.com/703007996/" target="_blank">A-SOUL</a> 是乐华娱乐与字节跳动合作的虚拟偶像企划，中之人（即虚拟形象扮演者）小姐姐们在动捕房的行为被各种传感设备捕捉，再结合软件渲染而展现出实时、3D的二次元虚拟形象与观众进行互动。团队由五位性格、特长、魅力各异的女孩组成，她们分别是
-                                <a href="https://space.bilibili.com/672346917/" target="_blank">向晚AvA</a>
-                                <a href="https://space.bilibili.com/672353429/" target="_blank">贝拉Bella</a>、
-                                <a href="https://space.bilibili.com/351609538/" target="_blank">珈乐Carol</a>、
-                                <a href="https://space.bilibili.com/672328094/" target="_blank">嘉然Diana</a>、
-                                <a href="https://space.bilibili.com/672342685/" target="_blank">乃琳Eileen</a>。 这也是国内首次由传统娱乐公司来运营的虚拟偶像团体，故企划在公布之初便引起了很高的关注度。
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <section class="ftco-section ftco-slant patr1" id="GroupIntro">
+        <div class="patr-introduce">
+            <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+        </div>
+        <div class="patr1-img">
+            <img src="./images/part1.png" alt="">
         </div>
     </section>
 
