--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="icon" href="./images/A-Cao.ico" type="image/x-icon" />
+  <head>
+    <link rel="icon" href="./images/A-Cao.ico" type="image/x-icon"/>
     <title>ASOUL FAN</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,112 +13,89 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+  </head>
 
-<body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
+  <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">ASOUL FAN</a>
-            <!-- 下拉菜单t -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="oi oi-menu"></span>菜单
-            </button>
-            <!-- 头部导航栏 -->
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="#MainPage" class="nav-link">主页</a></li>
-                    <li class="nav-item"><a href="#GroupIntro" class="nav-link">团体介绍</a></li>
-                    <li class="nav-item"><a href="#MemberIntro" class="nav-link">成员介绍</a></li>
-                    <li class="nav-item"><a href="#section-pricing" class="nav-link">粉丝文化</a></li>
-                    <li class="nav-item"><a href="#section-about" class="nav-link">关于我们</a></li>
-                </ul>
-            </div>
+      <div class="container">
+        <a class="navbar-brand" href="index.html">ASOUL FAN</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="oi oi-menu"></span>菜单
+        </button>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active"><a href="#MainPage" class="nav-link">主页</a></li>
+            <li class="nav-item"><a href="#GroupIntro" class="nav-link">团体介绍</a></li>
+            <li class="nav-item"><a href="#MemberIntro" class="nav-link">成员介绍</a></li>
+            <li class="nav-item"><a href="#section-pricing" class="nav-link">粉丝文化</a></li>
+            <li class="nav-item"><a href="#section-about" class="nav-link">关于我们</a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- END nav -->
 
     <section class="ftco-cover ftco-slant ftco-slant-white" id="MainPage">
-        <div class="Backgroundimage">
-            <div class="container">
-                <div class="row align-items-center  text-center ftco-vh-100">
-                    <div class="col-md-10" style="text-align:left;">
-                        <h1 class="ftco-heading ftco-animate">A-SOUL</h1>
-                        <h2 class="h5 ftco-subheading mb-5 ftco-animate">属于一个魂的社区捏</h2>
-
-                        <a href="https://wiki.asoulfan.com/" class="btn btn-primary ftco-animate">访问社区</a>
-                    </div>
-                </div>
-            </div>
+      <div class="Backgroundimage" loop=infinite>
+        <div class="about-item">
+          <div class="mohu"></div>
+          <img src="./images/logo描边.png" alt="">
+          <span>
+             属于一个魂的社区捏
+            </span>
         </div>
     </section>
+
+
 
     <section class="ftco-section ftco-slant patr1" id="GroupIntro">
-        <div class="patr-introduce">
-            <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
-        </div>
-        <div class="patr1-img">
-            <img src="./images/part1.png" alt="">
-        </div>
+      <div class="patr-introduce">
+        <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+      </div>
+      <div class="patr1-img">
+        <img src="./images/part1.png" alt="">
+      </div>
     </section>
 
-    <!-- 光标立绘？ -->
     <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
-        <div id="pt2">
-            <div class="idk">
-                <div class="p2_imgwrapper1 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/1.png" />
-                </div>
-                <div class="p2_imgwrapper2 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/2.png" />
-                </div>
-                <div class="p2_imgwrapper3 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/3.png" />
-                </div>
-                <div class="p2_imgwrapper4 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/4.png" />
-                </div>
-                <div class="p2_imgwrapper5 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/5.png" />
-                </div>
-            </div>
-            <!--<div class="intropage"></div>!-->
+      <div id="pt2">
+        <div class="idk">
+          <div class="p2_imgwrapper1 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/1.png" />
+          </div>
+          <div class="p2_imgwrapper2 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/2.png" />
+          </div>
+          <div class="p2_imgwrapper3 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/3.png" />
+          </div>
+          <div class="p2_imgwrapper4 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/4.png" />
+          </div>
+          <div class="p2_imgwrapper5 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/5.png" />
+          </div>
         </div>
+        <!--<div class="intropage"></div>!-->
+      </div>
     </section>
-    <!--粉丝文化-->
-    <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
-        <div class="intropage">
-
+    <footer class="ftco-footer bg-light" id="section-counter">
+      <div class="container">
+        <div class="row">
+          <div class="col-md text-left">
+            <h5 class="mt-0">&copy; Nov Studio. Sicovo All Rights Reserved</h5>
+          </div>
         </div>
-    </section>
-
-    <!-- 开发组名单 -->
-    <section class="ftco-section ftco-slant" id="thanks" style="background-color:#1d1d1d">
-        <div class="thankslist">
-
-        </div>
-    </section>
-
-
-
-
-    <!-- footer↓ -->
-    <footer class="ftco-footer" id="section-counter" style="background-color:#1d1d1d">
-        <div class="container">
-            <div class="row">
-                <div class="col-md text-left">
-                    <h5 class="mt-0" style="color:white">&copy; ProJect.A5F</h5>
-                </div>
-            </div>
-        </div>
+      </div>
     </footer>
 
     <!-- loader -->
-    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#4586ff" /></svg></div>
+    <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#4586ff"/></svg></div>
 
 
     <script src="js/jquery.min.js"></script>
@@ -131,10 +107,10 @@
     <script src="js/jquery.animateNumber.min.js"></script>
 
 
+
+
     <script src="js/main.js"></script>
 
 
-</body>
-
-
+  </body>
 </html>
