--- a/index.html
+++ b/index.html
@@ -50,14 +50,20 @@
 
     <section class="ftco-section ftco-slant patr1" id="GroupIntro">
       <div class="patr-introduce">
-        <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+        <div class="decorate">◤ <br>◤</div>
+        <p>A-SOUL是小姐姐们用动捕技术展</p>
+        <p>现出3D的虚拟形象与观众互动，是</p>
+        <p>首个由国内娱乐公司运营的虚拟偶</p>
+        <p>像企业。团队有五位性格、特长、</p>
+        <p>魅力各异的女孩组成。</p>
+        <div class="decorate2">◢</div>
       </div>
       <div class="patr1-img">
         <img src="./images/part1.png" alt="">
       </div>
     </section>
 
-    <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
+    <section class="ftco-section ftco-slant patr2" id="intro" style="background-color:#282828">
       <div id="pt2">
         <div class="idk">
           <div class="p2_imgwrapper1 p2_imgwrapper">
@@ -80,6 +86,51 @@
             <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
             <img class="p2_img" src="./images/5.png" />
           </div>
+        </div>
+        <!--<div class="intropage"></div>!-->
+      </div>
+    </section>
+    <section class="ftco-section ftco-slant part3" id="fansCulture" style="background-color:#282828">
+      <div id="pt3">
+        <div class="p3_container">
+          <div class="p3_imgwrapper1 p3_imgwrapper">
+            <div class="imgBox">
+            	<div class="p3_inner_text p3text01">视</div>
+            	<div class="p3_inner_text p3text02">频</div>
+	            <img class="p3_img1" src="./images/1.png" />
+            </div>
+          </div>
+          <div class="p3_imgwrapper2 p3_imgwrapper">
+            <div class="imgBox">
+	          	<div class="p3_inner_text p3text03">文</div>
+	            <div class="p3_inner_text p3text04">章</div>
+	            <img class="p3_img2" src="./images/2.png" />
+            </div>
+          </div>
+          <div class="p3_imgwrapper3 p3_imgwrapper p3_imgwrapper_center">
+            <div class="imgBoxMid">
+            	<div class="p3_inner_text p3text05">详</div>
+            	<div class="p3_inner_text p3text06">细</div>
+            	<div class="p3_inner_text p3text07">了</div>
+            	<div class="p3_inner_text p3text08">解</div>
+	            <img class="p3_img3" src="./images/3.png" />
+            </div>
+          </div>
+          <div class="p3_imgwrapper4 p3_imgwrapper">
+          	<div class="p3_inner_text p3text09">音</div>
+            <div class="p3_inner_text p3text10">乐</div>
+            <div class="imgBox">
+	            <img class="p3_img4" src="./images/4.png" />
+            </div>
+          </div>
+          <div class="p3_imgwrapper5 p3_imgwrapper">
+            <div class="p3_inner_text p3text11">其</div>
+            <div class="p3_inner_text p3text12">他</div>
+            <div class="imgBox">
+	            <img class="p3_img5" src="./images/5.png" />
+            </div>
+          </div>
+          
         </div>
         <!--<div class="intropage"></div>!-->
       </div>
