Revert "7.22 added:self-suiting"
This reverts commit 0e7393eec81b65f2f71a22af82dac6fcb6b75e6c.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="icon" href="./images/A-Cao.ico" type="image/x-icon" />
+  <head>
+    <link rel="icon" href="./images/A-Cao.ico" type="image/x-icon"/>
     <title>ASOUL FAN</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,88 +13,88 @@
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-</head>
+  </head>
 
-<body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
+  <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-        <div class="container">
-            <a class="navbar-brand" href="index.html">ASOUL FAN</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">ASOUL FAN</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="oi oi-menu"></span>菜单
         </button>
-            <div class="collapse navbar-collapse" id="ftco-nav">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active"><a href="#MainPage" class="nav-link">主页</a></li>
-                    <li class="nav-item"><a href="#GroupIntro" class="nav-link">团体介绍</a></li>
-                    <li class="nav-item"><a href="#MemberIntro" class="nav-link">成员介绍</a></li>
-                    <li class="nav-item"><a href="#section-pricing" class="nav-link">粉丝文化</a></li>
-                    <li class="nav-item"><a href="#section-about" class="nav-link">关于我们</a></li>
-                </ul>
-            </div>
+        <div class="collapse navbar-collapse" id="ftco-nav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active"><a href="#MainPage" class="nav-link">主页</a></li>
+            <li class="nav-item"><a href="#GroupIntro" class="nav-link">团体介绍</a></li>
+            <li class="nav-item"><a href="#MemberIntro" class="nav-link">成员介绍</a></li>
+            <li class="nav-item"><a href="#section-pricing" class="nav-link">粉丝文化</a></li>
+            <li class="nav-item"><a href="#section-about" class="nav-link">关于我们</a></li>
+          </ul>
         </div>
+      </div>
     </nav>
     <!-- END nav -->
 
     <section class="ftco-cover ftco-slant ftco-slant-white" id="MainPage">
-        <div class="Backgroundimage" loop=infinite>
-            <div class="about-item">
-                <div class="mohu"></div>
-                <img src="./images/logo描边.png" alt="">
-                <span>
+      <div class="Backgroundimage" loop=infinite>
+        <div class="about-item">
+          <div class="mohu"></div>
+          <img src="./images/logo描边.png" alt="">
+          <span>
              属于一个魂的社区捏
             </span>
-            </div>
+        </div>
     </section>
 
 
 
     <section class="ftco-section ftco-slant patr1" id="GroupIntro">
-        <div class="patr-introduce">
-            <div class="decorate">◤ <br>◤</div>
-            <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+      <div class="patr-introduce">
+        <div class="decorate">◤ <br>◤</div>
+         <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
 
-            <div class="decorate2">◢</div>
-        </div>
-        <div class="patr1-img">
-            <img src="./images/part1.png" alt="">
-        </div>
+        <div class="decorate2">◢</div>
+      </div>
+      <div class="patr1-img">
+        <img src="./images/part1.png" alt="">
+      </div>
     </section>
 
     <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
-        <div id="pt2">
-            <div id="p2MainFlexWrapper" class="p2MainFlexWrapperNormal">
-                <div class="p2_imgwrapper1 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/1.png" />
-                </div>
-                <div class="p2_imgwrapper2 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/2.png" />
-                </div>
-                <div class="p2_imgwrapper3 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/3.png" />
-                </div>
-                <div class="p2_imgwrapper4 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/4.png" />
-                </div>
-                <div class="p2_imgwrapper5 p2_imgwrapper">
-                    <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                    <img class="p2_img" src="./images/5.png" />
-                </div>
-            </div>
-            <!--<div class="intropage"></div>!-->
+      <div id="pt2">
+        <div class="idk">
+          <div class="p2_imgwrapper1 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/1.png" />
+          </div>
+          <div class="p2_imgwrapper2 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/2.png" />
+          </div>
+          <div class="p2_imgwrapper3 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/3.png" />
+          </div>
+          <div class="p2_imgwrapper4 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/4.png" />
+          </div>
+          <div class="p2_imgwrapper5 p2_imgwrapper">
+            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+            <img class="p2_img" src="./images/5.png" />
+          </div>
         </div>
+        <!--<div class="intropage"></div>!-->
+      </div>
     </section>
     <footer class="ftco-footer bg-light" id="section-counter">
-        <div class="container">
-            <div class="row">
-                <div class="col-md text-left">
-                    <h5 class="mt-0">&copy; Nov Studio. Sicovo All Rights Reserved</h5>
-                </div>
-            </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md text-left">
+            <h5 class="mt-0">&copy; Nov Studio. Sicovo All Rights Reserved</h5>
+          </div>
         </div>
+      </div>
     </footer>
 
     <!-- loader -->
@@ -109,8 +108,12 @@
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/jquery.animateNumber.min.js"></script>
+
+
+
+
     <script src="js/main.js"></script>
 
-</body>
 
+  </body>
 </html>
