--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
 <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
-      <div class="container">
-        <svg class="d-lg-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 861.96 187.54" style="width: 25vw; height: 8vh">
+        <div class="container">
+            <svg class="d-lg-none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 861.96 187.54" style="width: 25vw; height: 8vh">
           <defs>
             <style>.cls-1{fill:gray;}</style>
           </defs>
@@ -34,8 +34,8 @@
             </g>
           </g>
         </svg>
-        <a class="navbar-brand d-none d-lg-block" href="index.html">ASOUL FAN</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
+            <a class="navbar-brand d-none d-lg-block" href="index.html">ASOUL FAN</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span>菜单</span>
         </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
@@ -76,7 +76,7 @@
         </div>
     </section>
 
-    <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
+    <section class="ftco-section ftco-slant" id="MemberIntro" style="background-color:#282828">
         <div id="pt2">
             <div id="p2MainFlexWrapper" class="p2MainFlexWrapperNormal">
                 <div class="p2_imgwrapper1 p2_imgwrapper">
