Primitive ASOUL color bar

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </section>
 
-    <section class="ftco-section ftco-slant" id="intro" style="background-color:#282828">
+    <section class="ftco-section ftco-slant ftco-slant-white" id="MemberIntro" style="background-color:#282828">
       <div id="pt2">
         <div class="idk">
           <div class="p2_imgwrapper1 p2_imgwrapper">
@@ -87,7 +87,25 @@
         <!--<div class="intropage"></div>!-->
       </div>
     </section>
-    <footer class="ftco-footer bg-light" id="section-counter">
+
+    <section class="ftco-section ftco-slant" id="section-pricing" style="background-color:rgb(29, 29, 29)">
+      <h2 style="color: white">part 3</h2>
+    </section>
+    <section
+      class="ftco-section ftco-slant ftco-slant-white ftco-slant-hidden"
+      id="section-about"
+      style="background-color:rgb(40, 40, 40)"
+    >
+      <div id="developer-list">
+        <h2 class="title">开发者名单</h2>
+        <p id="developer-names">
+        </p>
+      </div>
+      <div class="bar-container">
+        <img class="asoul-bar-bg" src="./images/color-strip-bg.png" alt="">
+      </div>
+    </section>
+    <footer class="ftco-footer" id="section-counter" style="background-color:rgb(29, 29, 29)">
       <div class="container">
         <div class="row">
           <div class="col-md text-left">
