--- a/index.html
+++ b/index.html
@@ -115,6 +115,61 @@
             <!--<div class="intropage"></div>!-->
         </div>
     </section>
+    <!--part3-->
+    <section class="ftco-section  part3" id="fansCulture" style="background-color:#1d1d1d;">
+        <div id="pt3">
+            <div class="part3Top"></div>
+            <div class="p3_container">
+                <div class="p3_padding col-md-1">
+                    <div class="">
+                    </div>
+                </div>
+                <div class="p3_imgwrapper1 p3_imgwrapper col-md-2">
+                    <div class="imgBox">
+                        <p class="p3_inner_text" style="font-family:MyFontName;">视</p>
+                        <p class="p3_inner_text" style="font-family:MyFontName;">频</p>
+                        <img class="p3_img1" src="./images/1.png" />
+                    </div>
+                </div>
+                <div class="p3_imgwrapper2 p3_imgwrapper col-md-2">
+                    <div class="imgBox">
+                        <p class="p3_inner_text">文</p>
+                        <p class="p3_inner_text">章</p>
+                        <img class="p3_img2" src="./images/2.png" />
+                    </div>
+                </div>
+                <div class="p3_imgwrapper3 p3_imgwrapper col-md-2">
+                    <div class="imgBox">
+                        <div class="p3_inner_text p3MidText">详</div>
+                        <div class="p3_inner_text p3MidText">细</div>
+                        <div class="p3_inner_text p3MidText">了</div>
+                        <div class="p3_inner_text p3MidText">解</div>
+                        <img class="p3_img3" src="./images/3.png" />
+                    </div>
+                </div>
+                <div class="p3_imgwrapper4 p3_imgwrapper col-md-2">
+                    <div class="p3_inner_text">音</div>
+                    <div class="p3_inner_text">乐</div>
+                    <div class="imgBox">
+                        <img class="p3_img4" src="./images/4.png" />
+                    </div>
+                </div>
+                <div class="p3_imgwrapper5 p3_imgwrapper col-md-2">
+                    <div class="p3_inner_text">其</div>
+                    <div class="p3_inner_text">他</div>
+                    <div class="imgBox">
+                        <img class="p3_img5" src="./images/5.png" />
+                    </div>
+                </div>
+                <div class="p3_padding col-md-1	">
+                    <div class="">
+                    </div>
+                </div>
+            </div>
+            <div class="part3Bottom"></div>
+            <!--<div class="intropage"></div>!-->
+        </div>
+    </section>
     <footer class="ftco-footer bg-light" id="section-counter">
         <div class="container">
             <div class="row">
