--- a/index.html
+++ b/index.html
@@ -72,12 +72,18 @@
 
 
 
-    <section class="ftco-section ftco-slant patr1" id="GroupIntro">
-        <div class="patr-introduce">
+    <section class="ftco-section ftco-slant patr1 part1-mobile" id="GroupIntro">
+        <div class="part-introduce">
             <div class="decorate">◤ <br>◤</div>
             <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
 
             <div class="decorate2">◢</div>
+        </div>
+        <div class="part1-mobile-introduce">
+            <div class="mobile-decorate">◤ <br>◤</div>
+            <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+
+            <div class="mobile-decorate mobile-decorate-2">◢</div>
         </div>
         <div class="patr1-img">
             <img src="./images/part1.png" alt="">
