--- a/index.html
+++ b/index.html
@@ -80,13 +80,22 @@
             <div class="decorate2">◢</div>
         </div>
         <div class="part1-mobile-introduce">
-            <div class="mobile-decorate">◤ <br>◤</div>
-            <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
-
-            <div class="mobile-decorate mobile-decorate-2">◢</div>
+            <div class="introduce-wrapper">
+                <img src="./images/part1_bg_2.png" class="part1-bg-3">
+                <div class="mobile-decorate">◤ <br>◤</div>
+                <p>A-SOUL是小姐姐们用动捕技术展现出3D的虚拟形象与观众互动，是首个由国内娱乐公司运营的虚拟偶像企业。团队有五位性格、特长、魅力各异的女孩组成。</p>
+                <div class="mobile-decorate mobile-decorate-2">◢</div>
+            </div>
         </div>
         <div class="patr1-img">
-            <img src="./images/part1.png" alt="">
+            <div class="patr1-img-wrapper">
+                <!-- <img src="./images/part1.png"> -->
+                <img src="./images/part1_bg_1.png" class="part1-bg-1">
+                <img src="./images/part1_bg_2.png" class="part1-bg-2">
+                <img src="./images/part1_bg_3.png" class="part1-bg-3">
+                <img src="./images/part1_bg_4.png" class="part1-bg-4">
+                <img src="./images/part1_bg_5.png" class="part1-bg-5">
+            </div>
         </div>
     </section>
 
