Primitive ASOUL color vertical bar

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <section class="ftco-section ftco-slant" id="section-pricing" style="background-color:rgb(29, 29, 29)">
       <h2 style="color: white">part 3</h2>
     </section>
+
     <section
       class="ftco-section ftco-slant ftco-slant-white ftco-slant-hidden"
       id="section-about"
@@ -102,9 +103,11 @@
         </p>
       </div>
       <div class="bar-container">
-        <img class="asoul-bar-bg" src="./images/color-strip-bg.png" alt="">
+        <img class="asoul-bar asoul-bar-bg" src="./images/color-bar.png">
       </div>
+        <div class="asoul-bar-vert"></div>
     </section>
+
     <footer class="ftco-footer" id="section-counter" style="background-color:rgb(29, 29, 29)">
       <div class="container">
         <div class="row">
