--- a/index.html
+++ b/index.html
@@ -88,27 +88,42 @@
         <div id="pt2">
             <div id="p2MainFlexWrapper" class="p2MainFlexWrapperNormal">
                 <div class="p2ImgWrapper12">
-                    <div class="p2_imgwrapper1 p2_imgwrapper">
-                        <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                        <img class="p2_img" src="./images/1.png" />
+                    <div class="p2_introduce">
+                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_imgwrapper1 p2_imgwrapper">
+                            <div class="p2_inner_text">向</br>晚</br>A</br>V</br>A</div>
+                            <img class="p2_img" src="images/1.png" alt="向晚AvA">
+                        </div>
                     </div>
-                    <div class="p2_imgwrapper2 p2_imgwrapper">
-                        <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                        <img class="p2_img" src="./images/2.png" />
+                    <div class="p2_introduce">
+                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_imgwrapper2 p2_imgwrapper">
+                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <img class="p2_img" src="images/2.png" alt="贝拉Bella">
+                        </div>
                     </div>
                 </div>
                 <div class="p2ImgWrapper345">
-                    <div class="p2_imgwrapper3 p2_imgwrapper">
-                        <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                        <img class="p2_img" src="./images/3.png" />
+                    <div class="p2_introduce">
+                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_imgwrapper3 p2_imgwrapper">
+                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <img class="p2_img" src="images/3.png" alt="珈乐Carol">
+                        </div>
                     </div>
-                    <div class="p2_imgwrapper4 p2_imgwrapper">
-                        <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                        <img class="p2_img" src="./images/4.png" />
+                    <div class="p2_introduce">
+                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_imgwrapper4 p2_imgwrapper">
+                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <img class="p2_img" src="images/4.png" alt="嘉然Diana">
+                        </div>
                     </div>
-                    <div class="p2_imgwrapper5 p2_imgwrapper">
-                        <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
-                        <img class="p2_img" src="./images/5.png" />
+                    <div class="p2_introduce">
+                        <div class="p2_intro">向晚(AVA):乐华娱乐旗下虚拟偶像女团A-SOUL成员，组合游戏担当（Gamer）。</div>
+                        <div class="p2_imgwrapper5 p2_imgwrapper">
+                            <div class="p2_inner_text">A</br>V</br>A</br>V</br>A</div>
+                            <img class="p2_img" src="images/5.png" alt="乃琳Eileen">
+                        </div>
                     </div>
                 </div>
             </div>
